# EdgeCouchbase

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
analytics/: Cargo.toml  build.rs
analytics/src/: main.rs
deploy/docker/: Dockerfile.node  entrypoint.sh
docs/adr/: 001-language-choice.md  002-storage-engine.md  003-consistency-model.md
index/: Cargo.toml  build.rs
index/src/: main.rs
ops/: go.mod
ops/cmd/admin/: main.go
ops/cmd/cli/: main.go
proto/admin/v1/: admin_service.proto
proto/analytics/v1/: analytics_service.proto
proto/backup/v1/: backup_service.proto
proto/cluster/v1/: cluster_service.proto
proto/dcp/v1/: dcp_service.proto
proto/eventing/v1/: eventing_service.proto
proto/index/v1/: index_service.proto
proto/kv/v1/: data_service.proto
proto/query/v1/: query_service.proto
proto/search/v1/: search_service.proto
proto/xdcr/v1/: xdcr_service.proto
query/: Cargo.toml  build.rs
query/src/: main.rs
search/: Cargo.toml  build.rs
search/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
