[workspace]
resolver = "2"
members = [
    "server",
    "query",
    "index",
    "search",
    "analytics",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/edgecouchbase/edgecouchbase"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
proptest = "1.4"
criterion = "0.5"

thiserror = "1.0"
dashmap = "5.5"
parking_lot = "0.12"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
